<resources>
    <string name="app_name">Heroland</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!-- HOME -->
    <string name="todo">TODO</string>
    <string name="text_home">Touch the screen</string>
    <string name="text_version">1.0.0</string>
    <string name="menu_home">Home</string>
    <string name="menu_select">Role</string>
    <string name="menu_detail">Detail</string>
    <string name="menu_player">Player</string>
    <string name="menu_character">Character</string>
    <string name="menu_map">Map</string>
    <string name="menu_tile_map">Tile</string>
    <string name="menu_settings">Settings</string>
    <!-- DETAIL -->
    <string name="header_select_character">Select character</string>
    <string name="advantages">Special Advantages</string>
    <string name="weight_vulnerability">Weight/Vulnerability: <b>%1$s</b></string>
    <string name="advantage_1">1.&#160; %1$s:</string>
    <string name="advantage_2">2. %1$s:</string>
    <string name="development">Development:</string>
    <string name="cancel">Cancel</string>
    <string name="check">Check</string>
    <!-- OPTIONS -->
    <string name="menu_options">Options</string>
    <string name="options_head">%1$s Options</string>
    <string name="head_start_dwelling">Start Dwelling</string>
    <string name="radio_group_items">"%1$s    "</string>
    <string name="head_spells">Spells Types</string>
    <string name="type_color">(%1$s/%2$s)</string>
    <string name="selected_spells">Spells (%1$d/%2$d)</string>
    <string name="toast_already_spell">%1$s already selected</string>
    <string name="victory_points">Victory Points (%1$d/5)</string>
    <string name="toast_start">You must select 5 victory points</string>
    <string name="toast_start_spells">You must select %1$d spells</string>
    <string name="player_head">Players</string>
    <string name="delete_player">"Are you sure you want to remove %1$s from the list?"</string>
    <!-- SETTINGS -->
    <string name="vibrate">Vibrate</string>
    <string name="desc_vibrate">Vibrate when new character joins</string>
    <string name="desc_music">Turn on background music</string>
    <string name="desc_sound">Volume of sound effects</string>
    <string name="new_game">Restart - New Game</string>
    <string name="go"><![CDATA[>]]></string>
    <!--TILE MAP-->
    <string name="back">BACK</string>
    <string name="clearing">clearing</string>
    <string name="advice_chit">%1$s \n %2$s</string>
    <string name="sound_chit">%1$s</string>
    <!-- NATIVE DETAIL -->
    <string name="alerted">(Alerted)</string>
    <!-- PHASES -->
    <string name="phases">Phases</string>
    <string name="add_player">Add player</string>
    <string name="go_map">GO Map </string>

</resources>