<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.delek.heroland.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_rol_select"
            app:destination="@id/nav_rol_select" />
    </fragment>

    <fragment
        android:id="@+id/nav_character"
        android:name="com.delek.heroland.ui.character.CharacterFragment"
        android:label="@string/menu_character"
        tools:layout="@layout/fragment_character" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.delek.heroland.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_rol_select"
        android:name="com.delek.heroland.ui.roleselect.RoleSelectFragment"
        android:label="fragment_rol_select"
        tools:layout="@layout/fragment_rol_select" />
</navigation>